--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -23,6 +23,7 @@
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand visible-xs menu-label" data-toggle="collapse" data-target="#top-nav-collapse" href="#">
 							@Html.StringResource("responsiveskin.menulabel")
