Added styling for div.breadcrumb and div.body-wrapper.

--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -42,6 +42,19 @@ div.footer div.col-sm-12 {
 div.sub-footer {
     text-align:center;
     }
+div.body-wrapper {
+	padding-left:2rem;
+	padding-right:2rem;
+	color:#444444;
+}
+div.breadcrumb {
+	padding-left:2rem;
+	padding-right:2rem;
+	color:#444444;
+	height:2.8rem;
+	background-color:white;
+	border-radius;
+}
 </style>
 </head>
 <body>
