Added “border-radius:0” to div.breadcrumb styling.

--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -53,7 +53,7 @@ div.breadcrumb {
 	color:#444444;
 	height:2.8rem;
 	background-color:white;
-	border-radius;
+	border-radius:0;
 }
 </style>
 </head>
