This update begins adding the styling for the Product Page.

--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -56,6 +56,12 @@ div.breadcrumb {
 	border-radius:0;
 }
 </style>
+<style type="text/css">
+/*This section covers styling for the Product Page */
+div.product-page > div.row {
+	background-color:white;
+}
+</style>
 </head>
 <body>
 	@Html.Partial("_BodyOpen")
