--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -196,10 +196,49 @@ div.product-page > div.row {
 									</li>
 								</ul>
 							</li>
-							<!--NEWS-->
+							<!--ABOUT-->
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-									News
+									About
+									<span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu">
+									<li>
+										<a href="/sitemap/">
+											Who We Are
+										</a>
+									</li>
+									<li>
+										<a href="/sitemap/">
+											Our Story
+										</a>
+									</li>
+									<li>
+										<a href="/sitemap/">
+											Our Territories
+										</a>
+									</li>
+									<li>
+										<a href="/sitemap/">
+											Our Philosophy
+										</a>
+									</li>
+									<li>
+										<a href="/sitemap/">
+											The NDI Team
+										</a>
+									</li>
+									<li>
+										<a href="/sitemap/">
+											News
+										</a>
+									</li>
+								</ul>
+							</li>
+							<!--CONTACT-->
+							<li class="dropdown">
+								<a href="/contactus/" class="dropdown-toggle" data-toggle="dropdown">
+									Contact
 								</a>
 							</li>
 						</ul>
