--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -153,7 +153,7 @@ div.product-page > div.row {
 							</li>
 							<!--CATALOG-->
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								<a href="#" class="dropdown-toggle">
 									Catalog
 								</a>
 							</li>
@@ -237,7 +237,7 @@ div.product-page > div.row {
 							</li>
 							<!--CONTACT-->
 							<li class="dropdown">
-								<a href="/contactus/" class="dropdown-toggle" data-toggle="dropdown">
+								<a href="/contactus/" class="dropdown-toggle">
 									Contact
 								</a>
 							</li>
