--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<script src="//use.typekit.net/gpr7svo.js"></script>
 	@Html.Partial("_Head")
 <style type="text/css">
  div.container {
