--- a/style.css
+++ b/style.css
@@ -600,3 +600,20 @@ ul.footer-list {
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
+
+/* Button Styles */
+
+input.cta-btn, button.cta-btn, .cta-btn {
+    height:38px;
+    padding:0 30px;
+    text-align:center;
+    font-size:11px;
+    font-weight:600;
+    line-height:38px;
+    letter-spacing:.1rem;
+    text-transform:uppercase;
+    text-decoration:none;
+    white-space:nowrap;
+    border-radius:4px;
+    border: 1px solid #bbb;
+}
