Updated menubar links for “About” dropdown.

--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -154,7 +154,7 @@ div.product-page > div.row {
 							</li>
 							<!--CATALOG-->
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle">
+								<a href="/topic/catalog" class="dropdown-toggle">
 									Catalog
 								</a>
 							</li>
@@ -205,22 +205,22 @@ div.product-page > div.row {
 								</a>
 								<ul class="dropdown-menu">
 									<li>
-										<a href="/sitemap/">
+										<a href="/topic/about#who-we-are">
 											Who We Are
 										</a>
 									</li>
 									<li>
-										<a href="/sitemap/">
+										<a href="/topic/about#our-story">
 											Our Story
 										</a>
 									</li>
 									<li>
-										<a href="/sitemap/">
+										<a href="/topic/about#our-territories">
 											Our Territories
 										</a>
 									</li>
 									<li>
-										<a href="/sitemap/">
+										<a href="/topic/about#our-philosophy">
 											Our Philosophy
 										</a>
 									</li>
