Added “My Downloads” to Account dropdown.

--- a/_Layout.cshtml
+++ b/_Layout.cshtml
@@ -183,6 +183,11 @@ div.product-page > div.row {
 											@Html.StringResource("responsiveskin.orderhistorylabel")
 										</a>
 									</li>
+									<li>
+										<a href="/downloads">
+											My Downloads
+										</a>
+									</li>
 									@if(AppLogic.AppConfigBool("ShowWishButtons"))
 									{
 										<li>
